objects/Promotion__c.object
<CustomObject>
    <label>Promotion</label>
    <nameField>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF( End_Date__c  &gt;  TODAY() , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The date the promotion is due to end. This is the last date orders based on this promotion will be accepted.</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date on which the promotion is due to start. It defaults to the date the promotion is created.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_by__c</fullName>
        <inlineHelpText>Select the way qualifying items will be referenced.
(Part Number, Igor/PAC Code etc)</inlineHelpText>
        <label>Discount by:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Part number</fullName>
                </value>
                <value>
                    <fullName>IGOR/PAC Code</fullName>
                </value>
                <value>
                    <fullName>Product Line + Item Category</fullName>
                </value>
                <value>
                    <fullName>Material Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AA	Atomic absorption</fullName>
                </value>
                <value>
                    <fullName>ABI	Applied biosystems</fullName>
                </value>
                <value>
                    <fullName>AGT	Agilent technologies</fullName>
                </value>
                <value>
                    <fullName>AIG	Analytical general</fullName>
                </value>
                <value>
                    <fullName>ANP	Analytical proteomics</fullName>
                </value>
                <value>
                    <fullName>APS	Application systems</fullName>
                </value>
                <value>
                    <fullName>AWS	Automated workstations</fullName>
                </value>
                <value>
                    <fullName>CKP	Cellular kinetic photoproteins</fullName>
                </value>
                <value>
                    <fullName>CSA	Cellular screening &amp; ADME</fullName>
                </value>
                <value>
                    <fullName>DIA	Diagnostics</fullName>
                </value>
                <value>
                    <fullName>DIS	Distributor products / other</fullName>
                </value>
                <value>
                    <fullName>ESS	Enterprise software solutions</fullName>
                </value>
                <value>
                    <fullName>FGP	Functional genomics &amp; proteomics</fullName>
                </value>
                <value>
                    <fullName>GC	Gas chromatography</fullName>
                </value>
                <value>
                    <fullName>HCS	High content screening</fullName>
                </value>
                <value>
                    <fullName>HTS	Drug discovery reagents</fullName>
                </value>
                <value>
                    <fullName>IAS	Imaging &amp; analysis soln</fullName>
                </value>
                <value>
                    <fullName>ICP	ICP-OES</fullName>
                </value>
                <value>
                    <fullName>IR	IR spectroscopy</fullName>
                </value>
                <value>
                    <fullName>LC	Liquid chromatography</fullName>
                </value>
                <value>
                    <fullName>LVI	Live cell proteomics</fullName>
                </value>
                <value>
                    <fullName>MAS	ICP-MS</fullName>
                </value>
                <value>
                    <fullName>MDX	Molecular diagnostics</fullName>
                </value>
                <value>
                    <fullName>MLD	Multi-label detection</fullName>
                </value>
                <value>
                    <fullName>MOL	Research reagents</fullName>
                </value>
                <value>
                    <fullName>NEO	Neonatal</fullName>
                </value>
                <value>
                    <fullName>OMV	Other multi vendor</fullName>
                </value>
                <value>
                    <fullName>PBR	Protein biology reagents</fullName>
                </value>
                <value>
                    <fullName>PCL	Photina cell lines</fullName>
                </value>
                <value>
                    <fullName>PGI	Proteomics &amp; genomics instruments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_E_mail__c</fullName>
        <label>Contact E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <description>The person to whom to refer questions, issues or concerns.</description>
        <inlineHelpText>Contact this person for answers to any questions, issues or concerns.</inlineHelpText>
        <label>Contact Person</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Number__c</fullName>
        <inlineHelpText>The number should be of the format:
Product Line + Financial Quarter (2 digits) + Year (last 2 digits) + 2 Digit incremental Number
Example: ICP020714</inlineHelpText>
        <label>Promotion Number</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Qualifying_Items__c</fullName>
        <inlineHelpText>Add all Part Numbers / IGOR/PAC Codes / Item Categories which qualify for the discount.</inlineHelpText>
        <label>Qualifying Items</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Telephone__c</fullName>
        <label>Contact Telephone:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Geographic_Coverage__c</fullName>
        <label>Geographic Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>!GLOBAL</fullName>
                </value>
                <value>
                    <fullName>*AMERICAS</fullName>
                </value>
                <value>
                    <fullName>*Europe (PKI)</fullName>
                </value>
                <value>
                    <fullName>*Export (EMEA)</fullName>
                </value>
                <value>
                    <fullName>*Latin America</fullName>
                </value>
                <value>
                    <fullName>*PAC-RIM</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>Switzerland</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Calculation__c</fullName>
        <inlineHelpText>Examples:
-10%
-$5,000 – this MUST be accompanied by a value for each country, in local currency, where the promotion applies.
-10% for the first 4, -15% for 5-9, -20% for 10 and above.</inlineHelpText>
        <label>Discount Calculation</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Promotion_Description__c</fullName>
        <description>A full description of what the Account Managers need to know about the promotion and how to offer it.</description>
        <label>Promotion Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Variable_Discount_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the discount may be applied on an Up-to basis up to a maximum level detailed in the Discount Calculation field.</inlineHelpText>
        <label>Variable Discount Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Standard_Quote_Date__c</fullName>
        <formula>End_Date__c  - 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a calculated date based on the standard 30 day validity of normal quotations.</inlineHelpText>
        <label>Last Standard Quote Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Promotions_Allowed__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked more than one discount may be applied to the item.</inlineHelpText>
        <label>Other Promotions Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_Managerial_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked the promotion cannot be applied without going through the AM’s manager for approval.</inlineHelpText>
        <label>Requires Managerial Approval</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>